# rebels

./: .clang-format  .gitignore  CMakeLists.txt  README.md
cmake/: api.cmake  mod_fetch_eventbus.cmake  mod_fetch_fmt.cmake  mod_fetch_spdlog.cmake
examples/: CMakeLists.txt
examples/1_understand_data_source/: 0_understand_stream_data_reader.cpp  1_understand_market_depth_and_transaction.cpp  2_understand_book.cpp  3_understand_book_with_order.cpp  4_understand_data_source.cpp  CMakeLists.txt  understand_data_source.cpp
examples/1_understand_data_source/data/train/tas/000661.SZ/: td_20200526.csv
examples/understand_data_aligment/: CMakeLists.txt  understand_data_aligment.cpp
examples/understand_data_aligment/data/: AMZN.csv  APPLE.csv
examples/understand_data_source/: 0_understand_stream_data_reader.cpp  1_understand_bar_reader.cpp  4_understand_data_source.cpp  CMakeLists.txt
examples/understand_data_source/data/train/md/000661.SZ/: md_20200525.csv  md_20200526.csv  md_20200527.csv  md_20200528.csv
examples/understand_data_source/data/train/tas/000661.SZ/: td_20200525.csv  td_20200527.csv  td_20200528.csv
examples/understand_environment/: CMakeLists.txt  main.cpp  understand_environment.cpp
examples/understand_event_driven_pattern/: CMakeLists.txt  main.cpp
examples/understand_objects/: CMakeLists.txt  understand_account.cpp  understand_broker.cpp  understand_executor.cpp
examples/understand_utilities/: CMakeLists.txt  online_calculator.cpp
rebels/: CMakeLists.txt
rebels/include/rebels/: const.h  eventbus.h
rebels/include/rebels/common/: common.h  eventbus.h
rebels/include/rebels/core/: common.h  context.h  executor.h  strategy.h
rebels/include/rebels/data/: basic.h  data_source.h  records.h  streamer.h
rebels/include/rebels/environment/: environment.h
rebels/include/rebels/market/: book.h  measures.h  order.h
rebels/include/rebels/mod/sys_account/: account.h  portfolio.h  position.h
rebels/include/rebels/mod/sys_analyzer/: analyzer.h
rebels/include/rebels/mod/sys_simulation/: matcher.h  simulation_broker.h
rebels/include/rebels/mod/sys_transaction_cost/: deciders.h
rebels/include/rebels/object/: events.h  instrument.h  order.h  trade.h
rebels/include/rebels/utilities/: accumulator.h  comparison.h  config.h  csv.h  mock.h  output.h  time.h  trade.h
rebels/src/core/: context.cpp  executor.cpp  strategy.cpp
rebels/src/data/: basic.cpp  data_source.cpp  records.cpp  streamer.cpp
rebels/src/environment/: environment.cpp
rebels/src/market/: book.cpp  order.cpp
rebels/src/mod/sys_account/: account.cpp  portfolio.cpp  position.cpp
rebels/src/mod/sys_analyzer/: analyzer.cpp
rebels/src/mod/sys_simulation/: matcher.cpp  simulation_broker.cpp
rebels/src/mod/sys_transaction_cost/: decider.cpp
rebels/src/object/: events.cpp  order.cpp  trade.cpp
rebels/src/utilities/: accumulator.cpp  csv.cpp  mock.cpp
test/: CMakeLists.txt  test_reward.cpp  test_transaction_cost.cpp
test/data/: FB.csv
