project(understand_data_source)

#set(CMAKE_POSITION_INDEPENDENT_CODE ON)

add_executable(0_understand_stream_data_reader 0_understand_stream_data_reader.cpp)
target_link_libraries(0_understand_stream_data_reader rebels)

add_executable(1_understand_bar_reader 1_understand_bar_reader.cpp)
target_link_libraries(1_understand_bar_reader rebels)

add_executable(1_understand_market_depth_and_transaction 1_understand_market_depth_and_transaction.cpp)
target_link_libraries(1_understand_market_depth_and_transaction rebels)

add_executable(2_understand_book 2_understand_book.cpp)
target_link_libraries(2_understand_book rebels)

add_executable(understand_data_source understand_data_source.cpp)
target_link_libraries(understand_data_source rebels)

add_executable(3_understand_book_with_order 3_understand_book_with_order.cpp)
target_link_libraries(3_understand_book_with_order rebels)

add_executable(4_understand_book_with_risk_manager 4_understand_book_with_risk_manager.cpp)
target_link_libraries(4_understand_book_with_risk_manager rebels)

file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/data/ DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/data/)